[gd_scene load_steps=8 format=3 uid="uid://d2b7gb657nodk"]

[ext_resource type="PackedScene" uid="uid://3iine2m7e4yt" path="res://SampleProject/Scenes/Components/base_menu.tscn" id="2_base_menu"]
[ext_resource type="Script" path="res://SampleProject/Scripts/Shop/buy_item_list_display.gd" id="4_f0q4t"]
[ext_resource type="Script" path="res://SampleProject/Scripts/Shop/tooltip.gd" id="4_mq3pl"]
[ext_resource type="Theme" uid="uid://c3c6osxmpvjj6" path="res://release/src/resources/themes/default button.tres" id="5_button_theme"]
[ext_resource type="Script" path="res://SampleProject/Scripts/Shop/shop_ui.gd" id="6_shop_ui"]
[ext_resource type="Script" path="res://SampleProject/Scripts/Shop/sell_item_list_display.gd" id="8_sell_list"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrleq"]
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 14.0
bg_color = Color(0.6, 0.6, 0.6, 0.5372549)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.056291588, 0.05629161, 0.056291543, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ShopMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_shop_ui")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="BaseMenu" parent="." instance=ExtResource("2_base_menu")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -66.0
offset_right = -61.0
offset_bottom = 116.0
grow_vertical = 2

[node name="Buy" type="Button" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_button_theme")
text = " Buy"
expand_icon = true

[node name="Sell" type="Button" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_button_theme")
text = " Sell"
expand_icon = true

[node name="Blacksmith" type="Button" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_button_theme")
text = " Blacksmith"
expand_icon = true

[node name="Exit" type="Button" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_button_theme")
text = " Exit"
expand_icon = true

[node name="BuyContent" type="VBoxContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_right = -205.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterPanelHeader" type="HBoxContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/BuyContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AllWaresLabel" type="Label" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/BuyContent/CenterPanelHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "All Wares"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/BuyContent/CenterPanelHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemListDisplay" type="PanelContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/BuyContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_force_pass_scroll_events = false
script = ExtResource("4_f0q4t")
header_row = Array[String](["Name", "On Hand", "Buy Price"])
header_width = Array[int]([0, 0, 0])
table = Array[Array]([["item 1", "1", "123 $"], ["item 2", "13", "10 $"], ["item 3", "11", "143 $"]])
table_allow_reselect = true

[node name="SellContent" type="VBoxContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_right = -205.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterPanelHeader" type="HBoxContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/SellContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="AllWaresLabel" type="Label" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/SellContent/CenterPanelHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Your Inventory"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/SellContent/CenterPanelHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemListDisplay" type="PanelContainer" parent="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/SellContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_force_pass_scroll_events = false
script = ExtResource("8_sell_list")
header_row = Array[String](["Name", "Quantity", "Sell Price"])
header_width = Array[int]([0, 0, 0])
table_allow_reselect = true

[node name="TimerDisplay" parent="BaseMenu/HBoxContainer/RightPanel/VBoxContainer" index="0"]
script = null

[node name="GoldDisplay" parent="BaseMenu/HBoxContainer/RightPanel/VBoxContainer" index="1"]
script = null

[node name="BackgroundTexture" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.3529412)
self_modulate = Color(1, 1, 1, 0.3529412)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 4

[node name="AllLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -756.0
offset_top = -596.0
offset_right = -564.0
offset_bottom = -499.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.2)
theme_override_font_sizes/font_size = 72
text = "ALL"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 37.0
offset_top = 347.0
offset_right = 150.0
offset_bottom = 493.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mrleq")
script = ExtResource("4_mq3pl")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[img]res://assets/editor_icons/OthersIcon.svg[/img]
[b]Population[/b]

Number of items 0"
fit_content = true
scroll_active = false

[connection signal="pressed" from="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer/Blacksmith" to="." method="_on_blacksmith_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/CentralPanel/Panel/ContentContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]

[editable path="BaseMenu"]

